--- a/back/package.json
+++ b/back/package.json
@@ -11,7 +11,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.12.0-alpha.1",
+    "sequelize-cli": "^6.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
