--- a/back/package.json
+++ b/back/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www",
+    "start": "nodemon --exec babel-node ./src/bin/www",
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./bin/www",
-    "test": "cross-env NODE_ENV=test jest --coverage"
+    "test": "cross-env NODE_ENV=test jest --coverage",
+    "build": "babel src -s -D -d dist"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -23,7 +24,7 @@
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.0",
+    "@babel/node": "^7.16.5",
     "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "babel-jest": "^27.4.5",
