--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,8 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
+    "http-status": "^1.5.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
